--- a/components/header.html
+++ b/components/header.html
@@ -324,7 +324,7 @@
   <!-- Header with Logo -->
   <header>
     <a href="#hero" class="logo">
-      <img src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.PNG" alt="Lotus Green Future Logo" class="logo-img">
+      <img src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.png" alt="Lotus Green Future Logo" class="logo-img">
       <h1>Lotus Green Future</h1>
     </a>
     <nav>
